2006-01-26  Chris Toshok  <toshok@ximian.com>

	* HttpConfigurationSystem.cs: new class that gets sections from
	web.config files.

	* WebConfigurationManager.cs: change a lot of the
	NotImplementedExceptions to NotSupportedExceptions.
	(AppSettings): implement by just returning
	ConfigurationManager.AppSettings (note this is broken because
	ConfigurationManager.AppSettings are read-only, but it works for
	reading.)
	(ConnectionStrings): same (and probably broken in the same way..)
	(Init): replace the 2.0 IInternalConfigSystem with our
	HttpConfigurationSystem.

	* WebConfigurationHost.cs: add a comment about how things are
	likely to work in the face of IRemoteWebConfigurationHostServer.
	(CreateConfigurationContext): return a WebContext instance.

2006-01-25  Chris Toshok  <toshok@ximian.com>

	* AuthorizationSection.cs (IsValidUser): instead of a blanket
	false for a null user, just set the username to "" and short
	circuit out the check for roles.

2006-01-25  Chris Toshok  <toshok@ximian.com>

	* AuthorizationRule.cs (CheckUser): handle * and ?, and use
	String.Compare instead of ==.
	(CheckVerb): use String.Compare instead of ==.

	* AuthorizationSection.cs (IsValidUser): return false for a null
	user.

2006-01-22  Chris Toshok  <toshok@ximian.com>

	* GlobalizationSection.cs (VerifyData): quiet mcs.

2006-01-18  Chris Toshok  <toshok@ximian.com>

	* SystemWebSectionGroup.cs: wrap System.Web.Services references in
	WEBSERVICES_DEP.

2006-01-16  Chris Toshok  <toshok@ximian.com>

	* WebConfigurationManager.cs: implement a IConfigurationSystem for
	use with WebConfigurationManager.
	(GetSection): try to load the section
	using GetWebApplicationSection before calling into
	ConfigurationManager.GetSection.
	(GetWebApplicationConfiguration): move common code to here.
	(GetWebApplicationSection): use GetWebApplicationConfiguration.
	(AppSettings): implement.

	* WebConfigurationHost.cs (GetWebConfigFileName): add